MCA Dev/src/objects/Credit_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Same_as_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Same as App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Ticket__c</fullName>
        <formula>Total_Net_Processed_All__c  /  Number_of_Transactions_All__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Ticket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batches__c</fullName>
        <label># Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_NamingConvention__c</fullName>
        <formula>HYPERLINK( Id, TEXT(Month__c) &amp;&quot;-&quot;&amp; TEXT(Year__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC-NamingConvention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Request__c</fullName>
        <description>user can enter a quick note related to each record (e.g. “Missing Page 2” or “Need the NSF info” or “Need Transfer amounts”)</description>
        <label>Data Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_in_average__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MID_Account_Number__c</fullName>
        <label>MID Account #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_App__c</fullName>
        <formula>IF( AND(Name_Same_as_App__c = True,  Address_Same_as_App__c = True),&apos;Yes&apos;,&apos;No&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching App?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <description>This should automatically display the date of the first day of the month (1/1/2013) for the purpose of  reporting and filtering by date.</description>
        <formula>DATEVALUE(TEXT(YEAR( today() )) &amp;&quot;-&quot;&amp; (TEXT(MONTH( today() )) &amp;&quot;-01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01 - January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_Same_as_App__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Name Same as App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Transactions_AMEX_only__c</fullName>
        <label>Number of Transactions-AMEX only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Transactions_All__c</fullName>
        <label># Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Omit_From_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omit From Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_Month_Text__c</fullName>
        <description>A formula field that combines the Year and Month field. Used for referencing.</description>
        <formula>TEXT(Year__c) + &quot;.&quot; + TEXT(Month__c)</formula>
        <inlineHelpText>The month and year of the statement.</inlineHelpText>
        <label>Statement Month Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Month__c</fullName>
        <description>The month and year of the statement. Used for reporting.</description>
        <formula>DATE( VALUE(TEXT(Year__c)) , VALUE(LEFT(TEXT(Month__c),2)), 1)</formula>
        <inlineHelpText>The month and year of the statement. Used for reporting.</inlineHelpText>
        <label>Statement Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sys_Processor_Name__c</fullName>
        <formula>Processor_Name__r.Name</formula>
        <label>Sys Processor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Do not move to packaging org</description>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Default_Value__c</fullName>
        <defaultValue>&quot;Testing to see if default value works&quot;</defaultValue>
        <label>Test Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Email__c</fullName>
        <defaultValue>&quot;Test@ac.cc&quot;</defaultValue>
        <label>Test Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Percent__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Test Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Phone__c</fullName>
        <defaultValue>&apos;123456&apos;</defaultValue>
        <label>Test Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_Picklist__c</fullName>
        <label>Test Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>a1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyChoice</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Text_Area_Long__c</fullName>
        <defaultValue>&apos;Fundingo automation&apos;</defaultValue>
        <label>Test Text Area Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_URL__c</fullName>
        <defaultValue>&apos;http://www.wold.com&apos;</defaultValue>
        <label>Test URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_date_time__c</fullName>
        <label>Test date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_default_values__c</fullName>
        <defaultValue>&apos;Checkout&apos;</defaultValue>
        <label>Test default values</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_multipicklist__c</fullName>
        <label>Test multipicklist</label>
        <picklist>
            <picklistValues>
                <fullName>a1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>a3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Net_Processed_AMEX_only__c</fullName>
        <label>Total Net Processed-AMEX only</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Processed_All__c</fullName>
        <label>$ Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Merchant Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>